package rules

import pieces.PieceColor
import squares.Board
import squares.Square

class IsOnCheckRule {
    fun isMovePossible(board: Board,playerColor: PieceColor): Boolean {
        val kingPos: Square = board.getKingPosition(playerColor)
        TODO()
    }
    fun doesMoveBlock(board: Board,sqFrom: Square, sqTo: Square,playerColor: PieceColor): Boolean{
        TODO("Not yet implemented")
    }
}