package rules.end

interface EndGameRule {
    fun hasGameFinished(): Boolean
}