package rules.end

class StalemateRule: EndGameRule {
    override fun hasGameFinished(): Boolean {
        TODO("Not yet implemented")
    }
}